--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
+                font-weight: bold;
             } #prt2 {
                 font-size: 1vw;
                 position: absolute;
@@ -97,7 +98,7 @@
             </h2>
             <div id="main" style="width: 80%; margin: auto;">
                 <div id="space" style="height:0px"></div>
-                <div id="time" class="tC" style="font-size: 18vw; text-shadow: 0px 0px 2vw;">~</div>
+                <div id="time" class="tC fullscreen" style="font-size: 18vw; text-shadow: 0px 0px 2vw;">~</div>
             </div>
             <!-- BUTTONS -->
             <div class="tC">
