--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <link rel="preload" type="text/javascript" href="/prizm.dev/aeshs.sp/script.js"/>
+        <link rel="preload" type="text/javascript" href="script.js"/>
         <title>PRIZM.SPACE</title>
         <style>
             .tC {text-align: center;}
